Finish the website

--- a/pricing.html
+++ b/pricing.html
@@ -8,6 +8,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -42,7 +43,7 @@
   </header>
 
   <main class="gutter wrapper pad-b" id="main" tabindex="0" role="main">
-    <h1 class="text-center pad-t push-0">Subscriptions</h1>
+    <p class="text-center pad-t push-0 nina bold">Subscriptions</p>
     <div class="cards text-center grid">
       <div class="feature-three unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
         <img src="images/placeholder-2by3.svg" alt="">
@@ -76,15 +77,18 @@
         <a href="sign-up.html" class="btn btn-small">Buy</a>
       </div>
     </div>
+    <div class="embed embed-16by1">
+      <img class="embed-item" src="images/embed-image.jpg" alt="">
+    </div>
   </main>
 
   <footer role="contentinfo">
     <div class="wrapper thefooter">
       <div class="social-icons">
         <ul class="list-group-inline pad-t island-1-2 push-0">
-          <li><i class="icon i-32"><a href="https://twitter.com/"><img class="" src="images/twitter.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt=""></a></i></li>
+          <li><i class="icon i-32"><a href="https://twitter.com/"><img src="images/twitter.svg" alt="twitter"></a></i></li>
+          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt="instagram"></a></i></li>
+          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt="facebook"></a></i></li>
         </ul>
       </div>
 
