--- a/sign-up.html
+++ b/sign-up.html
@@ -8,8 +8,15 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700" rel="stylesheet">
 </head>
 <body>
+
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
   <header role="banner">
     <div class="wrapper grid pad-t-1-4 bannercontent">
       <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
@@ -31,7 +38,8 @@
   <main class="gutter wrapper" id="main" tabindex="0" role="main">
     <section class="contact pad-t-2 pad-b-2 island">
       <div class="max-length">
-        <h1 class="pad-t">Sign Up</h1>
+        <h1 class="pad-t push-1-4">Sign Up</h1>
+        <h2 class="kilo not-bold">And begin creating your site today!</h2>
         <form class="push-0" action="https://formspree.io/burr0117@algonquinlive.com" method="POST">
           <fieldset>
             <legend class="italic mega push">Personal information</legend>
@@ -45,28 +53,34 @@
                 <input id="email" type="email" placeholder="example@email.com" name="email" required>
               </div>
               <div class="push unit xs-1 s-1 m-1 l-1 pad-l milli">
-                <label for="number">Password</label>
+                <label for="password">Password</label>
                 <input id="password" name="password" required>
               </div>
               <div class="push unit xs-1 s-1 m-1 l-1 pad-l milli">
-                <label for="number">Re-Enter Password</label>
+                <label for="re-enter-password">Re-Enter Password</label>
                 <input id="re-enter-password" name="re-enter-password" required>
               </div>
             </div>
           </fieldset>
         </form>
-        <a href="index.html" class="btn btn-small">Sign Up</a>
+        <button type="submit" class="btn btn-small">Sign Up</button>
+        <div class="pad-t">
+          <a class="btn btn-small" href="pricing.html">View Pricing</a>
+        </div>
       </div>
     </section>
+    <div class="embed embed-16by1">
+      <img class="embed-item" src="images/embed-image.jpg" alt="">
+    </div>
   </main>
 
   <footer role="contentinfo">
     <div class="wrapper thefooter">
       <div class="social-icons">
         <ul class="list-group-inline pad-t island-1-2 push-0">
-          <li><i class="icon i-32"><a href="https://twitter.com/"><img class="" src="images/twitter.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt=""></a></i></li>
+          <li><i class="icon i-32"><a href="https://twitter.com/"><img src="images/twitter.svg" alt="twitter"></a></i></li>
+          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt="instagram"></a></i></li>
+          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt="facebook"></a></i></li>
         </ul>
       </div>
 
