--- a/tour.html
+++ b/tour.html
@@ -8,6 +8,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -112,9 +113,9 @@
     <div class="wrapper thefooter">
       <div class="social-icons">
         <ul class="list-group-inline pad-t island-1-2 push-0">
-          <li><i class="icon i-32"><a href="https://twitter.com/"><img class="" src="images/twitter.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt=""></a></i></li>
-          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt=""></a></i></li>
+          <li><i class="icon i-32"><a href="https://twitter.com/"><img src="images/twitter.svg" alt="twitter"></a></i></li>
+          <li><i class="icon i-32"><a href="https://instagram.com/"><img src="images/instagram.svg" alt="instagram"></a></i></li>
+          <li><i class="icon i-32"><a href="https://facebook.com/"><img class="img-flex" src="images/facebook.svg" alt="facebook"></a></i></li>
         </ul>
       </div>
 
