Add gutter to index

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         </div>
       </div>
 
-      <div class="getting-started text-center max-length pad-t-2">
+      <div class="getting-started text-center max-length pad-t-2 gutter">
         <h2>Getting Started</h2>
         <p class="gstarterd">Getting started with MySite is quick and easy! All you have to do is press the sign up button below, enter your name, email, password and that's it! You're now ready to create your very own personalized website!</p>
         <a href="sign-up.html" class="btn btn-large">Sign Up</a>
         <img src="image/placeholder.jpg" alt="">
       </div>
 
-      <div class="about text-center max-length pad-t-2">
+      <div class="about text-center max-length pad-t-2 gutter">
         <div class="embed embed-16by9">
           <img class="about-img pad-b embed-item" src="images/about.jpg" alt="">
         </div>
@@ -87,7 +87,7 @@
         <a href="sign-up.html" class="btn btn-large">Sign Up</a>
       </div>
 
-      <div class="contact text-center max-length pad-t-2">
+      <div class="contact text-center max-length pad-t-2 gutter">
         <h2>Our Contacts:</h2>
         <dl class="contact-info">
           <dt>Email</dt>
