Replace logo file

--- a/pricing.html
+++ b/pricing.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <section class="index-banner pad-t-2 pad-b-2 relative">
-      <div class="banner-text absolute wrapper insland-1-2">
+      <div class="banner-text absolute wrapper insland-1-2 gutter-1-2">
         <h1 class="push-0 nina text-upper">your site.</h1>
         <p class="push-0 nina title bold text-upper">your way.</p>
         <p class="subtitle bold">Build your very own website</p>
