--- a/tour.html
+++ b/tour.html
@@ -32,7 +32,7 @@
         </nav>
       </div>
     </div>
-    <section class="index-banner pad-t-2 pad-b-2 relative">
+    <section class="index-banner pad-t-2 pad-b-2 relative gutter-1-2">
       <div class="banner-text absolute wrapper insland-1-2">
         <h1 class="push-0 nina text-upper">your site.</h1>
         <p class="push-0 nina title bold text-upper">your way.</p>
@@ -120,13 +120,13 @@
       </div>
 
       <div class="footer-info">
-        <div class="milli nav text-right">
+        <div class="milli nav text-right grid">
           <nav>
             <ul class="push-none grid grid-middle unit list-group">
-              <li class="unit gutter-1-2"><a href="index.html">Home</a></li>
-              <li class="unit gutter-1-2"><a href="tour.html">Products</a></li>
-              <li class="unit gutter-1-2"><a href="pricing.html">Pricing</a></li>
-              <li class="unit gutter-1-2"><a href="sign-up.html">Sign Up</a></li>
+                <li class="unit gutter-1-2"><a href="index.html">Home</a></li>
+                <li class="unit gutter-1-2"><a href="tour.html">Products</a></li>
+                <li class="unit gutter-1-2"><a href="pricing.html">Pricing</a></li>
+                <li class="unit gutter-1-2"><a href="sign-up.html">Sign Up</a></li>
             </ul>
           </nav>
         </div>
