--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <section class="index-banner pad-t-2 pad-b-2 relative">
-      <div class="banner-text absolute wrapper insland-1-2">
+      <div class="banner-text absolute wrapper insland-1-2 gutter-1-2">
         <h1 class="push-0 nina text-upper">your site.</h1>
         <p class="push-0 nina title bold text-upper">your way.</p>
         <p class="subtitle bold">Build your very own website</p>
@@ -114,7 +114,7 @@
       <div class="footer-info">
         <div class="milli nav text-right">
           <nav>
-            <ul class="push-none grid grid-middle unit list-group">
+            <ul class="push-none grid grid-middle unit list-group botfooter">
               <li class="unit gutter-1-2"><a href="index.html">Home</a></li>
               <li class="unit gutter-1-2"><a href="tour.html">Products</a></li>
               <li class="unit gutter-1-2"><a href="pricing.html">Pricing</a></li>
