--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <header role="banner">
     <div class="wrapper grid pad-t-1-4 bannercontent">
       <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
-        <i><a class="aclass" href="index.html"><img class="logo" src="images/twitter.png" alt="MySite logo"></a></i>
+        <a href="index.html"><img class="" src="images/logo.png" alt="My Site logo"></a>
+        <!-- <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="MySite logo"></a></i> -->
       </div>
       <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
