Finish the code again

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   <header role="banner">
     <div class="wrapper grid pad-t-1-4 bannercontent">
       <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
-      <a href="index.html"><img class="img-flex logo" src="images/logo.svg" alt="My Site logo"></a>
-        <!-- <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="MySite logo"></a></i> -->
+        <p class="tera bold"><a href="index.html">MySite</a></p>
       </div>
       <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
