--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
   <header role="banner">
     <div class="wrapper grid pad-t-1-4 bannercontent">
       <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
-        <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a></i>
+        <p class="tera bold"><a href="index.html">MySite</a></p>
       </div>
       <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
@@ -37,7 +37,7 @@
         <h1 class="push-0 nina text-upper">your site.</h1>
         <p class="push-0 nina title bold text-upper">your way.</p>
         <p class="subtitle bold">Build your very own website</p>
-        <a href="sign-up.html" class="btn btn-small">Sign Up</a>
+        <a href="sign-up.html" class="btn btn-small bold">Sign Up</a>
       </div>
     </section>
   </header>
