--- a/tour.html
+++ b/tour.html
@@ -19,7 +19,7 @@
   <header role="banner">
     <div class="wrapper grid pad-t-1-4 bannercontent">
       <div class="unit xs-1 s-1-3 m-1-3 l-1-3">
-        <i><a class="aclass" href="index.html"><img class="logo" src="images/logo.png" alt="logo"></a></i>
+        <p class="tera bold"><a href="index.html">MySite</a></p>
       </div>
       <div class="nav navtop text-right unit xs-1 s-2-3 m-2-3 l-2-3">
         <nav role="navigation" id="nav" tabindex="0">
@@ -32,12 +32,12 @@
         </nav>
       </div>
     </div>
-    <section class="index-banner pad-t-2 pad-b-2 relative gutter-1-2">
-      <div class="banner-text absolute wrapper insland-1-2">
+    <section class="index-banner pad-t-2 pad-b-2 relative">
+      <div class="banner-text absolute wrapper insland-1-2 gutter-1-2">
         <h1 class="push-0 nina text-upper">your site.</h1>
         <p class="push-0 nina title bold text-upper">your way.</p>
         <p class="subtitle bold">Build your very own website</p>
-        <a href="sign-up.html" class="btn btn-small">Sign Up</a>
+        <a href="sign-up.html" class="btn btn-small bold">Sign Up</a>
       </div>
     </section>
   </header>
@@ -120,7 +120,7 @@
       </div>
 
       <div class="footer-info">
-        <div class="milli nav text-right grid">
+        <div class="milli nav text-right">
           <nav>
             <ul class="push-none grid grid-middle unit list-group">
                 <li class="unit gutter-1-2"><a href="index.html">Home</a></li>
